# Smoldyn-official

./: .clang-format  CMakeLists.txt
.github/workflows/: linux.yml  osx.yml  wheels_linux.yml  windows.yml
scripts/: install_wheel.py.in  update_pybind11.sh
source/NextSubVolume/: CMakeLists.txt
source/Smoldyn/: smolcmd.c  smoldyn.h  smolgraphics.c
source/libSteve/: CMakeLists.txt  opengl2.c  opengl2.h
source/python/: CMakeLists.txt  Simulation.cpp  Simulation.h  module.cpp  setup.py.in
